--- a/demo/index.html
+++ b/demo/index.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <title>angular-colorpicker</title>
+    <script src="https://cdn.jsdelivr.net/g/jquery@3.1.1,angularjs@1.5.8"></script>
+
     <link rel="stylesheet" href="../dist/css/angular-colorpicker.css">
-    <script src="../bower_components/jquery/jquery.js"></script>
-    <script src="../bower_components/angular/angular.js"></script>
     <script src="../dist/js/angular-colorpicker.js"></script>
+
     <style>
 		body{
 			background-color: #ccc;
